--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
 
-        <div>
+        <div class="row">
             <div class="header-text">
                 <h1><span>Milena Arce</span></h1>
                 <p>Développeuse Web passionnée, créant des expériences numériques.</p>
@@ -54,12 +54,12 @@
                                 <li>Node.js</li>
                             </ul>
                             <div class="projet-links">
-                                <a href="#" class="link">See code <span>&rarr;</span></a>
+                                <a href="https://github.com/milenaarce/e-commerce.git" class="link">See code <span>&rarr;</span></a>
                                 <a href="#" class="link">Visit Site <span>&rarr;</span></a>
                             </div>
                         </div>
                         <div class="projet-image-container">
-                            <img src="" alt="">
+                            <img src="imagenes/e-commerce.png" alt="">
                         </div>
                     </div>
 
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="projet-image-container">
-                            <img src="" alt="">
+                            <img src="imagenes/AdaLovelace.png" alt="">
                         </div>
                     </div>
 
@@ -93,15 +93,33 @@
                                 <li>API externe (OpenWeather)</li>
                             </ul>
                             <div class="projet-links">
+                                <a href="https://github.com/milenaarce/weather-app.git" class="link">See code <span>&rarr;</span></a>
+                                <a href="https://milenaarce.github.io/weather-app/" class="link">Visit Site <span>&rarr;</span></a>
+                            </div>
+                        </div>
+                        <div class="projet-image-container">
+                            <img src="imagenes/weather.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="projet-container">
+                        <div class="projet-text">
+                            <h3>Application Web d'encryption et de decryption</h3>
+                            <p>La applicación web decripta y encripta mensajes que el utilisador escriba según el algoritmo de encriptamiento que selecccione, así mismo el utilisador puede ver el historial de los mensajes que ha encriptado y decriptado en ese momento</p>
+                            <ul class="projet-list">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                            <div class="projet-links">
                                 <a href="#" class="link">See code <span>&rarr;</span></a>
                                 <a href="#" class="link">Visit Site <span>&rarr;</span></a>
                             </div>
                         </div>
                         <div class="projet-image-container">
-                            <img src="" alt="">
+                            <img src="imagenes/chiffer-dechiffrer.png" alt="">
                         </div>
                     </div>
-
 
                 </div>
             </div>
@@ -121,61 +139,58 @@
                     </div>
 
                     <div class="about-photo-container"> <!-- photo de mi -->
-                        <img src="" alt="">
+                        <img src="imagenes/about-me3.jpg" alt="">
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer>
+    <section id="contact">
         <div class="row">
-            <section id="contact">
-                <div class="row">
-                    <h2>Me contacter</h2>
-                    <div class="contact-info">
-                        <p>
-                            Vous cherchez un site web performant et convivial pour représenter votre produit ou votre entreprise ?
-                            Vous avez besoin d'une consultation ? Vous avez des questions, des conseils à me donner ou vous voulez
-                            Je ferai de mon mieux pour vous répondre. 😊 Le moyen le plus rapide de me joindre est par e-mail.
-                        </p>
-                        <a href="mailto:milenaarce769@gmail.com" class="btn">milenaarce769@gmail.com</a>
-                    </div>
-
-                    <ul class="footer-social-links">
-                        <li class="footer-social-link-item">
-                            <a href="www.linkedin.com/in/milena-arce-24405b277" title="Lien vers mon profil LinkedIn">
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                        </li>
-                        <li class="footer-social-link-item">
-                            <a href="https://github.com/milenaarce" title="Lien vers mon profil GitHub">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                        </li>
-                        <li class="footer-social-link-item">
-                            <a href="mailto:milenaarce769@gmail.com" title="M'envoyer un e-mail">
-                                <i class="fa-solid fa-envelope"></i>
-                            </a>
-                        </li>
-                        <li class="footer-social-link-item">
-                            <a href="https://www.instagram.com/milenaarce_/profilecard/?igsh=MWRpejBqbWNwYWg3ag==" title="Lien vers mon profil Instagram">
-                                <i class="fa-brands fa-square-instagram"></i>
-                            </a>
-                        </li>
-                        <li class="footer-social-link-item">
-                            <a href="https://wa.me/33668716482" title="M'envoyer un message sur WhatsApp">
-                                <i class="fa-brands fa-square-whatsapp"></i>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <p>
-                        &copy; 2025 - Page designed & developed by <a href="#contact" class="link">Milena Arce</a>.
-                    </p>
-
+            <h2>Me contacter</h2>
+            <div class="contact-info">
+                <p>
+                    Vous avez un projet, une question ou simplement envie d’échanger sur l’informatique? 
+                    N’hésitez pas à me contacter! Je suis toujours ouverte aux nouvelles opportunités et collaborations. 
+                    📩 Le moyen le plus rapide de me joindre est par e-mail ou WhatsApp, et je ferai de mon mieux pour vous répondre rapidement. 😊</p>
+                <div class="projet-links">
+                    <a href="mailto:milenaarce769@gmail.com" class="btn">milenaarce769@gmail.com</a>
+                    <a href="https://wa.me/33668716482" class="btn">+33 6 68 71 64 82</a>
                 </div>
-            </section>
+            </div>
+            
+        </div>
+    </section>
+    <footer>
+        <div class="row">    
+            <ul class="footer-social-links">
+                <li class="footer-social-link-item">
+                    <a href="www.linkedin.com/in/milena-arce-24405b277" title="Lien vers mon profil LinkedIn">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+                <li class="footer-social-link-item">
+                    <a href="https://github.com/milenaarce" title="Lien vers mon profil GitHub">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li class="footer-social-link-item">
+                    <a href="mailto:milenaarce769@gmail.com" title="M'envoyer un e-mail">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                </li>
+                <li class="footer-social-link-item">
+                    <a href="https://www.instagram.com/milenaarce_/profilecard/?igsh=MWRpejBqbWNwYWg3ag==" title="Lien vers mon profil Instagram">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                </li>
+                <li class="footer-social-link-item">
+                    <a href="https://wa.me/33668716482" title="M'envoyer un message sur WhatsApp">
+                        <i class="fa-brands fa-square-whatsapp"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
 
