--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </ul>
                             <div class="projet-links">
                                 <a href="https://github.com/milenaarce/e-commerce.git" class="link">See code <span>&rarr;</span></a>
-                                <a href="#" class="link">Visit Site <span>&rarr;</span></a>
+                                <!-- <a href="#" class="link">Visit Site <span>&rarr;</span></a> -->
                             </div>
                         </div>
                         <div class="projet-image-container">
@@ -112,8 +112,8 @@
                                 <li>JavaScript</li>
                             </ul>
                             <div class="projet-links">
-                                <a href="#" class="link">See code <span>&rarr;</span></a>
-                                <a href="#" class="link">Visit Site <span>&rarr;</span></a>
+                                <a href="https://github.com/milenaarce/encryption-decryption.git" class="link">See code <span>&rarr;</span></a>
+                                <a href="https://milenaarce.github.io/encryption-decryption/" class="link">Visit Site <span>&rarr;</span></a>
                             </div>
                         </div>
                         <div class="projet-image-container">
@@ -135,7 +135,7 @@
                         <p>
                             Passionnée par l’informatique, je suis une développeuse en pleine évolution, toujours curieuse d’apprendre et de relever de nouveaux défis. Autonome et adaptable, je m’intègre facilement dans différents environnements de travail. Grâce à ma rigueur et ma capacité d’analyse, je trouve des solutions efficaces aux problèmes complexes. J’ai une expérience pratique en développement web ainsi qu’en analyse de données, acquise au cours de mes études et projets. La cybersécurité m’intéresse particulièrement, et j’explore régulièrement ce domaine pour approfondir mes compétences.
                         </p>
-                        <a href="#" class="btn">My Resume</a>
+                        <a href="Mon-CV.pdf" class="btn">My Resume</a>
                     </div>
 
                     <div class="about-photo-container"> <!-- photo de mi -->
