adición de información de los proyectos

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
 
                     <div class="projet-container">
                         <div class="projet-text">
-                            <h3>Full Stack E-commerce Website</h3>
-                            <p>Descripcion del proyecto</p>
+                            <h3>Site e-commerce Full Stack</h3>
+                            <p>
+                                Développement en cours d’un site e-commerce permettant la vente de livres. 
+                                Les utilisateurs peuvent consulter les informations des ouvrages et 
+                                effectuer des achats en ligne.
+                            </p>
                             <ul class="projet-list">
                                 <li>MongoDB</li>
                                 <li>Express</li>
@@ -65,8 +69,13 @@
 
                     <div class="projet-container">
                         <div class="projet-text">
-                            <h3>Application Web interactive (quiz ludique)</h3>
-                            <p>Descripcion del proyecto</p>
+                            <h3>Application Web interactive – Quiz ludique</h3>
+                            <p>
+                                Création d’un site web interactif dédié à Ada Lovelace, 
+                                présentant sa vie et ses contributions à l’informatique. 
+                                Les utilisateurs peuvent tester leurs connaissances grâce 
+                                à un quiz à choix multiples.
+                            </p>
                             <ul class="projet-list">
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -85,7 +94,11 @@
                     <div class="projet-container">
                         <div class="projet-text">
                             <h3>Application météo</h3>
-                            <p>Développement d’une application météo utilisant HTML, CSS, JavaScript et l’API OpenWeather pour afficher les prévisions en temps réel.</p>
+                            <p>
+                                Développement d’une application web permettant d’afficher 
+                                en temps réel les prévisions météorologiques de 
+                                différentes villes du monde à partir d’une API.
+                            </p>
                             <ul class="projet-list">
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -104,8 +117,12 @@
 
                     <div class="projet-container">
                         <div class="projet-text">
-                            <h3>Application Web d'encryption et de decryption</h3>
-                            <p>La applicación web decripta y encripta mensajes que el utilisador escriba según el algoritmo de encriptamiento que selecccione, así mismo el utilisador puede ver el historial de los mensajes que ha encriptado y decriptado en ese momento</p>
+                            <h3>Application Web de chiffrement et déchiffrement</h3>
+                            <p>
+                                Conception d’une application permettant aux utilisateurs de chiffrer 
+                                et déchiffrer des messages en fonction de l’algorithme de cryptographie 
+                                sélectionné. L’historique des messages traités est également consultable.
+                            </p>
                             <ul class="projet-list">
                                 <li>HTML</li>
                                 <li>CSS</li>
@@ -135,7 +152,7 @@
                         <p>
                             Passionnée par l’informatique, je suis une développeuse en pleine évolution, toujours curieuse d’apprendre et de relever de nouveaux défis. Autonome et adaptable, je m’intègre facilement dans différents environnements de travail. Grâce à ma rigueur et ma capacité d’analyse, je trouve des solutions efficaces aux problèmes complexes. J’ai une expérience pratique en développement web ainsi qu’en analyse de données, acquise au cours de mes études et projets. La cybersécurité m’intéresse particulièrement, et j’explore régulièrement ce domaine pour approfondir mes compétences.
                         </p>
-                        <a href="Mon-CV.pdf" class="btn">My Resume</a>
+                        <a href="Mon-CV.pdf" class="btn">Mon CV</a>
                     </div>
 
                     <div class="about-photo-container"> <!-- photo de mi -->
