--- a/index.html
+++ b/index.html
@@ -69,30 +69,6 @@
 
                     <div class="projet-container">
                         <div class="projet-text">
-                            <h3>Application Web interactive – Quiz ludique</h3>
-                            <p>
-                                Création d’un site web interactif dédié à Ada Lovelace, 
-                                présentant sa vie et ses contributions à l’informatique. 
-                                Les utilisateurs peuvent tester leurs connaissances grâce 
-                                à un quiz à choix multiples.
-                            </p>
-                            <ul class="projet-list">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
-                            </ul>
-                            <div class="projet-links">
-                                <a href="https://github.com/milenaarce/Ada-Lovelace.git" class="link">See code <span>&rarr;</span></a>
-                                <a href="https://milenaarce.github.io/Ada-Lovelace/" class="link">Visit Site <span>&rarr;</span></a>
-                            </div>
-                        </div>
-                        <div class="projet-image-container">
-                            <img src="imagenes/AdaLovelace.png" alt="">
-                        </div>
-                    </div>
-
-                    <div class="projet-container">
-                        <div class="projet-text">
                             <h3>Application météo</h3>
                             <p>
                                 Développement d’une application web permettant d’afficher 
@@ -112,6 +88,30 @@
                         </div>
                         <div class="projet-image-container">
                             <img src="imagenes/weather.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="projet-container">
+                        <div class="projet-text">
+                            <h3>Application Web interactive – Quiz ludique</h3>
+                            <p>
+                                Création d’un site web interactif dédié à Ada Lovelace, 
+                                présentant sa vie et ses contributions à l’informatique. 
+                                Les utilisateurs peuvent tester leurs connaissances grâce 
+                                à un quiz à choix multiples.
+                            </p>
+                            <ul class="projet-list">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                            </ul>
+                            <div class="projet-links">
+                                <a href="https://github.com/milenaarce/Ada-Lovelace.git" class="link">See code <span>&rarr;</span></a>
+                                <a href="https://milenaarce.github.io/Ada-Lovelace/" class="link">Visit Site <span>&rarr;</span></a>
+                            </div>
+                        </div>
+                        <div class="projet-image-container">
+                            <img src="imagenes/AdaLovelace.png" alt="">
                         </div>
                     </div>
 
@@ -150,13 +150,21 @@
                 <div class="about-content">
                     <div class="about-text">
                         <p>
-                            Passionnée par l’informatique, je suis une développeuse en pleine évolution, toujours curieuse d’apprendre et de relever de nouveaux défis. Autonome et adaptable, je m’intègre facilement dans différents environnements de travail. Grâce à ma rigueur et ma capacité d’analyse, je trouve des solutions efficaces aux problèmes complexes. J’ai une expérience pratique en développement web ainsi qu’en analyse de données, acquise au cours de mes études et projets. La cybersécurité m’intéresse particulièrement, et j’explore régulièrement ce domaine pour approfondir mes compétences.
+                            Passionnée par l’informatique, je suis une développeuse en pleine évolution, 
+                            toujours curieuse d’apprendre et de relever de nouveaux défis. 
+                            Autonome et adaptable, je m’intègre facilement dans différents 
+                            environnements de travail. Grâce à ma rigueur et ma capacité d’analyse, je 
+                            trouve des solutions efficaces aux problèmes complexes. J’ai une 
+                            expérience pratique en développement web ainsi qu’en analyse de données, 
+                            acquise au cours de mes études et projets. 
+                            La cybersécurité m’intéresse particulièrement, et j’explore régulièrement 
+                            ce domaine pour approfondir mes compétences.
                         </p>
                         <a href="Mon-CV.pdf" class="btn">Mon CV</a>
                     </div>
 
                     <div class="about-photo-container"> <!-- photo de mi -->
-                        <img src="imagenes/about-me3.jpg" alt="">
+                        <img src="imagenes/about-me5.jpg" alt="">
                     </div>
                 </div>
             </div>
