mientras veo como hago el deployment de weather app sin mostrar la key

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </ul>
                             <div class="projet-links">
                                 <a href="https://github.com/milenaarce/weather-app.git" class="link">See code <span>&rarr;</span></a>
-                                <a href="https://milenaarce.github.io/weather-app/" class="link">Visit Site <span>&rarr;</span></a>
+                                <!-- <a href="https://milenaarce.github.io/weather-app/" class="link">Visit Site <span>&rarr;</span></a> -->
                             </div>
                         </div>
                         <div class="projet-image-container">
