--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             La cybersécurité m’intéresse particulièrement, et j’explore régulièrement 
                             ce domaine pour approfondir mes compétences.
                         </p>
-                        <a href="mon-CV.pdf" class="btn">Mon CV</a>
+                        <a href="MilenaArceCV-alt.pdf" class="btn">Mon CV</a>
                     </div>
 
                     <div class="about-photo-container"> <!-- photo de mi -->
