--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="row">    
             <ul class="footer-social-links">
                 <li class="footer-social-link-item">
-                    <a href="www.linkedin.com/in/milena-arce-24405b277" title="Lien vers mon profil LinkedIn">
+                    <a href="https://www.linkedin.com/in/milena-arce-24405b277/" title="Lien vers mon profil LinkedIn">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </li>
