--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="row">
             <div class="header-text">
                 <h1><span>Milena Arce</span></h1>
-                <p>Développeuse Web passionnée, créant des expériences numériques.</p>
-                <a href="#contact" class="btn btn-colored">Get in touch</a>
+                <p>Développeuse Web & Logiciel passionnée, créant des expériences numériques innovantes.</p>
+                <a href="#contact" class="btn btn-colored">Contactez-moi</a>
             </div>
         </div>
 
