ajout projet tisseo

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                                 <li>HTML</li>
                                 <li>CSS</li>
                                 <li>JavaScript</li>
+                                <li>Bootstrap</li>
                             </ul>
                             <div class="projet-links">
                                 <a href="https://github.com/milenaarce/Ada-Lovelace.git" class="link">See code <span>&rarr;</span></a>
@@ -138,11 +139,35 @@
                         </div>
                     </div>
 
+                    <div class="projet-container">
+                        <div class="projet-text">
+                            <h3>Application Web – Transport public (API Tisséo)</h3>
+                            <p>
+                                Développement d’une application web interactive utilisant l’API REST de Tisséo.
+                                L’application permet d’afficher la liste des lignes de transport disponibles à Toulouse. 
+                                Lorsqu’un utilisateur clique sur une ligne, les arrêts correspondants sont affichés dynamiquement.
+                            </p>
+                            <ul class="projet-list">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>API externe (Tisséo)</li>
+                            </ul>
+                            <div class="projet-links">
+                                <a href="https://github.com/milenaarce/tisseo-API" class="link">See code <span>&rarr;</span></a>
+                            </div>
+                        </div>
+                        <div class="projet-image-container">
+                            <img src="imagenes/chiffer-dechiffrer.png" alt="">
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
         </section>
 
+        https://github.com/milenaarce/tisseo-API
 
         <section id="about">
             <div class="row">
