update image tisseo

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                         <div class="projet-image-container">
-                            <img src="imagenes/chiffer-dechiffrer.png" alt="">
+                            <img src="imagenes/tisseo.png" alt="">
                         </div>
                     </div>
 
@@ -166,8 +166,6 @@
             </div>
 
         </section>
-
-        https://github.com/milenaarce/tisseo-API
 
         <section id="about">
             <div class="row">
